--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,11 +12,11 @@ body, button {
 font-family: 'Jost', sans-serif;
 }
 
-
+// 
 
 // Navbar
 .navbar {
-  height: 10vh;
+  height: 11vh;
   background-color: $outdoorsgreen;
   color: white 
 }
