--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,7 +119,7 @@ body {
 }
 
 .hero-background {
-  background-image: url(../assets/images/talkingBackground.jpg);
+  background-image: url(../assets/images/demo.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -128,12 +128,20 @@ body {
 .columns .button {
   margin-top: 20px;
   margin-bottom: 5vh;
-  height: 8vw;
-  width: auto ;
+  height: 6vw;
+  width: 25vw ;
   padding: 40px;
-  // border: 2px solid black;
+  font-size: 25px;
 }
 
+.hero-text-over-photo {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  text-align: center;
+  padding-bottom: 28vh;
+  font-size: 32px
+}
 // About
 
 // Mediator
@@ -230,6 +238,23 @@ body {
 }
 
 @keyframes fadeIn {
+  0% {
+    transform: translate(0px, 0px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(0px, 0);
+    opacity: 1;
+  }
+}
+
+.fadeInOnLoad2 {
+  animation: fadeIn2 1.5s ease backwards;
+  animation-delay: .8s;
+}
+
+@keyframes fadeIn2 {
   0% {
     transform: translate(0px, 0px);
     opacity: 0;
