--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,11 +22,18 @@ body, button {
 font-family: 'Jost', sans-serif;
 }
 
+
 body {
   display: flex;
   min-height: 82vh;
   flex-direction: column;
 }
+
+@media screen and (min-width: 800px) {
+.content {
+  padding: 2% 10% 2% 10%;
+
+}}
 
 .back-button {
   position: absolute;
@@ -41,6 +48,12 @@ body {
   cursor: pointer;
   transition: all 0.1s;
     color: grey;
+}
+
+.back-button-subtitle {
+  color: grey;
+    font-size:small;
+    margin-top: -5px;
 }
 
 #button:hover {
@@ -242,9 +255,14 @@ body {
 }
 
 // #mediator-card:hover {
-//   transform: scale(0.995);
+//   box-shadow: 0 0 20px 1px grey;
 //   transition: all .1s ease-in-out;
-// }fontawesome-styling
+
+// } 
+
+#about-image {
+  border-radius: 0.25rem;
+}
 
 // Mediator
 
@@ -269,7 +287,7 @@ body {
 }
 
 .mediator-image {
-  height: 50vh;
+  
   border-radius: 0.25rem;
 }
 
@@ -354,6 +372,25 @@ body {
   height: 20vh;
   width: auto
 
+}
+
+.faq-button {
+  font-size: 22px;
+  padding-left: 6px;
+  padding-top: 3px;
+  border: none;
+  background: none;
+}
+
+.faq-button :hover {
+  cursor: pointer;
+  transition: all 0.1s;
+  color: grey;
+}
+
+.faq-button-subtitle {
+  color: grey;
+  font-size: smaller;
 }
 
 // Animations
