--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,11 +29,23 @@ body {
   flex-direction: column;
 }
 
-@media screen and (min-width: 800px) {
+p {
+  color: black
+}
+
+
+@media only screen and (min-width: 1301px) {
 .content {
   padding: 2% 10% 2% 10%;
 
 }}
+
+@media only screen and (max-width: 1300px) {
+  .content {
+    padding: 2% 2% 2% 2%;
+
+  }
+}
 
 .back-button {
   position: absolute;
@@ -83,6 +95,8 @@ body {
   width: 100%;
   height: 100%;
 }
+
+
 
 
 
@@ -234,7 +248,7 @@ body {
   background-color: $outdoorsgreen;
   text-transform: uppercase;
   font-weight: 300;
-  font-size: 3vh;
+  font-size: 1.5rem;
   border-radius: 0.25rem;
 }
 
@@ -268,15 +282,17 @@ body {
 
 #mediator-contact-info {
   text-decoration: none;
-  
 }
+
+
 
 #mediator-contact-info:hover {
   color: #0000EE (blue)
 }
 
 .mediator-text {
-  font-size:larger ;
+  font-size:1.25rem ;
+  color: black
 }
 
 #mediator-image {
@@ -393,6 +409,12 @@ body {
   font-size: smaller;
 }
 
+// Useful Links
+
+#links-text {
+  font-size: 1.25rem;
+  color: black
+}
 // Animations
 
 .fadeInOnLoad {
