--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-$forestgreen: #659206;
+$forestgreen: #567c03;
 $outdoorsgreen: #76a15b;
 $info: $forestgreen;
 $warning: $outdoorsgreen;
@@ -295,7 +295,7 @@ justify-content: center;
   display: flex;
   flex-direction: column;
   justify-content: end;
-  min-height: 92vh;
+  height: 84vh;
 }
 
 .hero.is-success .title {
@@ -322,7 +322,7 @@ justify-content: center;
 }
 
 #has-text-over-photo {
-  color: #6c8249;
+  color: forestgreen;
 
 }
 
@@ -346,7 +346,7 @@ justify-content: center;
   padding: 10px;
   text-align: center;
   color: white;
-  background-color: $outdoorsgreen;
+  background-color: $forestgreen;
   text-transform: uppercase;
   font-weight: 300;
   font-size: 1.5rem;
@@ -458,6 +458,8 @@ justify-content: center;
 }
 
 .copyright {
+  margin: -30px 0 -30px 0;
+    font-size: 0.6em;
   padding-top: 1rem;
 
   span {
@@ -470,6 +472,12 @@ justify-content: center;
 
 
 // FAQ's
+
+
+
+#message {
+  margin-bottom: 0.4em;
+}
 
 #faq-card {
   min-height: 280px;
@@ -560,4 +568,106 @@ max-height: 500px
     transform: translate(0px, 0);
     opacity: 1;
   }
+}
+
+
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
+  transition: 0.5s;
+  outline: none;
+}
+
+/* ------------ */
+.text-primary {
+  color: #567c03 !important;
+}
+
+.card {
+  background-color: #fff;
+  border-radius: 8px;
+  color: #475f7b;
+  overflow: hidden;
+}
+
+.rc-accordion-toggle {
+  display: flex;
+  align-items: flex-start;
+  cursor: pointer;
+  justify-content: space-between;
+  background-color: #ebedf0;
+  transition: 0.3s;
+  margin-bottom: -20px;
+}
+
+.rc-accordion-toggle p {
+  font-size: 1.25em;
+}
+
+.rc-accordion-toggle.active {
+  background-color: #567c03;
+  color: #fff
+}
+
+
+.rc-accordion-toggle.active .rc-accordion-icon {
+  transform: rotate(180deg);
+  color: #fff 
+}
+
+.rc-accordion-card {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+.rc-accordion-card:last-child {
+  margin-bottom: 0;
+}
+
+.rc-accordion-title {
+  
+  position: relative;
+  margin-bottom: 0;
+  color: #475F7B;
+  transition: 0.3s;
+}
+
+.rc-accordion-toggle.active .rc-accordion-title {
+  color: #fff;
+}
+
+.rc-accordion-icon {
+  position: relative;
+  top: 2px;
+  color: #475F7B;
+  transition: 0.35s;
+  font-size: 12px;
+}
+
+.rc-accordion-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 15px;
+}
+
+.rc-accordion-body p {
+  margin-bottom: 0;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #727E8C;
+}
+
+.rc-collapse {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.35s ease;
+}
+
+.rc-collapse.show {
+  height: auto;
 }
