--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@ button {
 }
 
 
+
 body {
   display: flex;
   min-height: 82vh;
@@ -51,6 +52,7 @@ body {
 
 @media only screen and (min-width: 1301px) {
   .content {
+    min-height: 63vh;
     padding: 2% 10% 2% 10%;
 
   }
@@ -58,6 +60,7 @@ body {
 
 @media only screen and (max-width: 1300px) {
   .content {
+    min-height: 63vh;
     padding: 2% 2% 2% 2%;
 
   }
@@ -135,7 +138,9 @@ body {
   height: 8vh;
   background-color: $outdoorsgreen;
   color: white;
-  font-size: 1.15em;
+  font-size: 1.1em;
+  display: flex;
+    flex-direction: row;
 }
 
 .navbar-menu {
@@ -213,10 +218,8 @@ span {
 }
 
 #navbar-title-text {
-  color: white
+  color: white;
 }
-
-
 
 #navbar-item:active {
   color: black;
@@ -312,8 +315,8 @@ justify-content: center;
 
 
 .columns .button {
-  margin-top: 65vh;
-  margin-bottom: 20vh;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
   height: 6vw;
   width: 25vw;
   padding: 40px;
@@ -349,7 +352,7 @@ justify-content: center;
   background-color: $forestgreen;
   text-transform: uppercase;
   font-weight: 300;
-  font-size: 1.5rem;
+  font-size: 1rem;
   border-radius: 0.25rem;
 }
 
@@ -395,7 +398,7 @@ justify-content: center;
 }
 
 .mediator-text {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   color: black
 }
 
@@ -429,10 +432,11 @@ justify-content: center;
 // Footer
 
 .footer {
-  font-size: 1.15em;
+  font-size: 1.1em;
   color: white;
-  min-height: 8vh;
+  min-height: 10vh;
   background-color: $outdoorsgreen;
+  padding: 5px 0px 0px
 }
 
 .footer-group {
@@ -445,22 +449,20 @@ justify-content: center;
   }
 }
 
-.footer-image-1 {
-  height: 100px;
-  width: 100%;
-  max-width: 640px;
+#footer-images img {
+padding-top: 5px;
+height: 5em;
+  width: auto;
+  display: inline-block;
+} 
 
-  img {
-    display: block;
-    max-width: 100%;
-    margin: 0 auto;
-  }
-}
+
 
 .copyright {
-  margin: -30px 0 -30px 0;
+  margin: 0px 0 0px 0;
     font-size: 0.6em;
-  padding-top: 1rem;
+  
+  
 
   span {
     color: #808591;
@@ -536,6 +538,24 @@ max-height: 500px
 
 // Animations
 
+.fade-in-modal {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: .15s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .fadeInOnLoad {
   animation: fadeIn 1.2s ease backwards;
   animation-delay: 0.4s;
@@ -601,9 +621,9 @@ a:focus {
   margin-bottom: -20px;
 }
 
-.rc-accordion-toggle p {
-  font-size: 1.25em;
-}
+// .rc-accordion-toggle p {
+//   font-size: .9em;
+// }
 
 .rc-accordion-toggle.active {
   background-color: #567c03;
@@ -655,10 +675,8 @@ a:focus {
 
 .rc-accordion-body p {
   margin-bottom: 0;
-  font-size: 18px;
-  font-weight: 400;
   line-height: 24px;
-  color: #727E8C;
+  color: black;
 }
 
 .rc-collapse {
@@ -670,4 +688,14 @@ a:focus {
 
 .rc-collapse.show {
   height: auto;
+}
+
+.tabs {
+ margin-top: -2em;
+}
+
+// Modal
+
+.modal-content {
+transition: 0.3s ease;
 }
