--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,7 +52,7 @@ body {
 
 @media only screen and (min-width: 1301px) {
   .content {
-    min-height: 63vh;
+    min-height: 67vh;
     padding: 2% 10% 2% 10%;
 
   }
@@ -60,7 +60,7 @@ body {
 
 @media only screen and (max-width: 1300px) {
   .content {
-    min-height: 63vh;
+    min-height: 67vh;
     padding: 2% 2% 2% 2%;
 
   }
@@ -135,7 +135,7 @@ body {
 
 // Navbar
 .navbar {
-  height: 8vh;
+  min-height: 8vh;
   background-color: $outdoorsgreen;
   color: white;
   font-size: 1.1em;
@@ -196,7 +196,7 @@ body {
 #navbar-title {
   display: 'none';
   flex-direction: column;
-    justify-content: center;
+  align-self: center;
   text-align: center;
   color: white;
   max-height: fit-content;
@@ -219,6 +219,7 @@ span {
 
 #navbar-title-text {
   color: white;
+  white-space: nowrap;
 }
 
 #navbar-item:active {
@@ -247,6 +248,14 @@ left: calc(100% + (-135px));
   left: calc(100% + (-115px));
 }
 
+.navbar-item a{
+  cursor: default
+}
+
+.navbar-dropdown a{
+  cursor: pointer
+}
+
 // Title-hero
 .title-hero {
   min-height: 7vh;
@@ -271,6 +280,8 @@ flex-direction: row;
 align-items: center;
 justify-content: center;
 }
+
+
 
 .logo-home {
   height: 70px;
@@ -315,8 +326,8 @@ justify-content: center;
 
 
 .columns .button {
-  margin-top: 10vh;
-  margin-bottom: 10vh;
+  margin-top: 25em;
+  margin-bottom: 5em;
   height: 6vw;
   width: 25vw;
   padding: 40px;
@@ -357,9 +368,8 @@ justify-content: center;
 }
 
 #read-more {
-  color: rgb(74, 74, 74);
-  position: absolute;
-  bottom: 0;
+  color: rgb(121, 120, 120);
+
   padding-bottom: 10px;
 }
 
@@ -369,7 +379,7 @@ justify-content: center;
 }
 
 #mediator-card {
-  min-height: 72vh;
+  min-height: 52vh;
   margin-top: -1rem;
 }
 
@@ -444,7 +454,7 @@ justify-content: center;
 .footer {
   font-size: 1.1em;
   color: white;
-  min-height: 10vh;
+  min-height: 25vh;
   background-color: $outdoorsgreen;
   padding: 5px 0px 0px
 }
@@ -466,6 +476,10 @@ height: 5em;
   display: inline-block;
 } 
 
+.footer-image-2 {
+  scale: 1.3
+}
+
 
 
 .copyright {
@@ -485,7 +499,15 @@ height: 5em;
 
 // FAQ's
 
-
+.faq-buttons-div-demo {
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    top: 40vh;
+    position: relative;
+    margin-bottom: -4em;
+    padding: 0px 10px 
+}
 
 #message {
   margin-bottom: 0.4em;
@@ -513,7 +535,7 @@ height: 5em;
 }
 
 .faq-button {
-  font-size: 22px;
+  font-size: 1.1em;
   padding-left: 6px;
   padding-top: 3px;
   border: none;
