--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 $forestgreen: #567c03;
-$outdoorsgreen: #76a15b;
+$outdoorsgreen: #859e64;
 $info: $forestgreen;
 $warning: $outdoorsgreen;
 $footer-padding: 2rem 0 2rem 0;
