--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,8 +54,7 @@ body {
 @media only screen and (min-width: 1301px) {
   .content {
     min-height: 67vh;
-    padding: 2% 10% 2% 10%;
-
+    padding: 2% 13% 2% 13%;
   }
 }
 
@@ -63,7 +62,6 @@ body {
   .content {
     min-height: 67vh;
     padding: 2% 2% 2% 2%;
-
   }
 }
 
@@ -96,7 +94,8 @@ body {
 }
 
 #fontawesome-styling {
-  color: black
+  color: black;
+  // white-space: nowrap
 }
 
 .video-responsive {
@@ -117,7 +116,7 @@ body {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 100%
 }
 
 
@@ -132,7 +131,6 @@ body {
     display: none;
   }
 }
-
 
 
 
@@ -443,8 +441,8 @@ position: relative
 
 #about-image {
   border-radius: 0.25rem;
-  height: 13em;
-  width: 13em;
+  height: 14em;
+  width: 12em;
   object-fit: cover;
 }
 
@@ -623,6 +621,13 @@ border-radius: 0.25rem;
 height: auto;
 max-height: 500px
 };
+
+#mediation-breakdown-image-style-2 {
+  border-radius: 0.25rem;
+  height: auto;
+  max-width: 700px
+
+}
 
 // Useful Links
 
