--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,16 @@ $footer-padding: 2rem 0 2rem 0;
 
 }
 
+// .has-dropdown a[class="navbar-link"]::after {
+//   transform: rotate(-135deg);
+//   transition: transform 0.2s;
+// }
+
+// .has-dropdown a[class="navbar-link is-active"]::after {
+//   transform: rotate(-45deg);
+//   transition: transform 0.2s;
+// }
+
 // General 
 html,
 body,
@@ -51,20 +61,56 @@ body {
   top: -140px
 }
 
-@media only screen and (min-width: 1301px) {
-  .content {
-    min-height: 67vh;
-    padding: 2% 13% 2% 13%;
-  }
+.content ul {
+  list-style: disc outside;
+  margin-left: 0em;
+  margin-top: 1em;
 }
 
-@media only screen and (max-width: 1300px) {
+// DESKTOP
+@media only screen and (min-width: 1281px) {
   .content {
     min-height: 67vh;
-    padding: 2% 2% 2% 2%;
+    padding: 2% 6% 2% 6%;
+    max-width: 1500px;
+      margin-left: auto;
+      margin-right: auto;
+  } 
+  .content-mediators {
+     min-height: 67vh;
+     padding: 2% 0% 2% 0%;
+    }
   }
-  
-}
+
+// TABLET
+@media screen and (min-device-width: 801px) and (max-device-width: 1281px) {
+.content {
+    min-height: 67vh;
+    padding: 2% 6% 2% 6%;
+  }  .content-mediators {
+      min-height: 67vh;
+      padding: 2% 5% 2% 5%;
+    }
+    .footer {
+      padding-top: 20px;
+    }
+  }
+
+// MOBILE
+@media only screen and (max-width: 800px) {
+  .content {
+      min-height: 67vh;
+      padding: 2% -0% 2% 0%;
+    }
+    .content-mediators {
+      min-height: 67vh;
+      padding: 2% 5% 2% 5%;
+    }  .tabs {
+        display: none
+      } .footer {
+         padding-top: 20px;
+       }
+    }
 
 .back-button {
   position: absolute;
@@ -399,6 +445,9 @@ position: relative
 
 #mediator-card {
   margin-top: -1rem;
+  height: 40rem;
+  // box-shadow:  0.5em 10em -0.125em rgba(10, 10, 10, 0.1),
+  //   0 0px 0 1px rgba(10, 10, 10, 0.02)
 }
 
 #mediator-card-subtitle {
@@ -426,7 +475,7 @@ position: relative
 
 // #mediator-card:hover {
 // transition: all 0.2s;
-// scale: 1.015;
+// scale: 1.01;
 // box-shadow: 0 0 6px rgba(0, 0, 0, .6)
 // }
 
@@ -434,11 +483,7 @@ position: relative
   margin: -10px
 }
 
-// #mediator-card:hover {
-//   box-shadow: 0 0 20px 1px grey;
-//   transition: all .1s ease-in-out;
 
-// } 
 
 #about-image {
   border-radius: 0.25rem;
@@ -449,12 +494,14 @@ position: relative
 
 // Mediator
 
+.our-mediators {
+  height: auto;
+}
+
 #mediator-contact-info {
   text-decoration: none;
   font-size: 1.1rem;
 }
-
-
 
 #mediator-contact-info:hover {
   color: #0000EE (blue)
@@ -724,9 +771,11 @@ a:focus {
 
 .card {
   background-color: #fff;
-  border-radius: 8px;
+  border-radius: 10px;
   color: #475f7b;
   overflow: hidden;
+  box-shadow: 0em 0em 1em 0.1em rgba(10, 10, 10, 0.1), 0em 0em 1em 0.1em rgba(10, 10, 10, 0.1)
+ 
 }
 
 .rc-accordion-toggle {
@@ -811,6 +860,8 @@ a:focus {
 .tabs {
  margin-top: -2em;
 }
+
+
 
 // Modal
 
